--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
 </head>
 
 <body>
-    <h1 class="app-title">Weather<br>Application</h1>
+    <!-- <h1 class="app-title">Weather<br>Application</h1> -->
+    <div class="main-container main-container2">
+        <h1 style="font-size: 8rem; margin: 0px auto;">🌍</h1>
+        <span style="text-align: center;">
 
+            <span style="font-size: 2rem; font-weight: bold;">Weather</span>
+            <span style="font-size: 1.5rem;">Application</span>
+
+        </span>
+        <button class="button" onclick="document.querySelector('.city-input').focus();">Search</button>
+        <hr style="width: 100%; opacity: 25%;">
+        <span style="text-align: center; font-size: 0.7rem; opacity: 70%;">Forecast With Clarity</span>
+
+    </div>
     <div class="app-wrapper">
         <main class="main-container">
             <header class="input-container">
