--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
   <title>Weather App - Real-Time City Forecast</title>
+  
+  <!-- ✅ Paste the meta tag here -->
+  <meta name="google-site-verification" content="_XdiGAKULfblYQRAh5ccY2cE3-gQdnbHfPoBvA2vEsg" />
 
   <!-- ✅ SEO Meta Tags -->
   <meta name="title" content="Weather App - Real-Time City Forecast">
